# your-fun

./: .gitignore  LICENSE  README.md  simulate_history.py
api/: package.json  tsconfig.json
api/src/: index.ts
api/src/middleware/: auth.ts
api/src/routes/: chat.ts  learn.ts  verify.ts
api/src/services/: ai-engine.ts  solana.ts
profile/: README.md
programs/your-fun/: Cargo.toml
programs/your-fun/src/: error.rs  lib.rs  state.rs
programs/your-fun/src/instructions/: initialize.rs  interaction.rs  mod.rs  register_human.rs  session.rs  verify_human.rs
sdk-python/: setup.py
sdk-python/yourfun/: __init__.py  ai.py  client.py  proof.py  solana.py  types.py
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/src/: ai.ts  client.ts  index.ts  pda.ts  proof.ts  types.ts
